[package]
name = "allosaur-benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
bls12_381_plus = "0.8.13"
core2 = "0.4"
digest = "0.10.7"
group = "0.13"
merlin = "3"
rand_core = { version = "0.6", features = ["std"] }
rand_chacha = "0.3"
rayon = "1.5"
serde = { version = "1", features = ["serde_derive"] }
serde_cbor = "0.11"
sha2 = "0.9"
sha3 = "0.10.8"
uint-zigzag = { version = "0.2.0", features = ["std"] }
zeroize = "1.5"
criterion = "0.4"
rocket = "0.5.0"
once_cell = "1.19.0"
lazy_static = "1.4.0"
serde-big-array = "0.5.1"
serde_json = "1.0.112"
base64 = "0.21.7"

[dev-dependencies]
criterion = "0.4"
serde_bare = "0.5"
